--- a/scratchindex.html
+++ b/scratchindex.html
@@ -4,7 +4,6 @@
     <title>Boston Bruins</title>
     <link rel="stylesheet" href="css/finalstyles.css">
 </head>
-
 <body>
     <div style="text-align: center;">
         <!--Title Words-->
@@ -75,9 +74,10 @@
         allowfullscreen></iframe>
     <br><br><br><br>
     <!--Anchor and Resume-->
-    <a href="file:///C:/Users/seanb/OneDrive/Desktop/Final%20Exam/Resume%20(bootstrap)/index.html">Resume</a>
+    <a href="Resume (bootstrap)/index.html">Resume</a>
     <br><br>
     <a style="text-align: center;" href="#top">Back to Top</a>
 </body>
 
 </html>
+
